+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6.4a1?
=============================

*Release date: XX-XXX-20XX*

Core and Builtins
-----------------

- Issue #7019: Raise ValueError when unmarshalling bad long data, instead
  of producing internally inconsistent Python longs.

Library
-------

- Issue #7052: Removed nonexisting NullHandler from logging.__all__.

- Issue #7039: Fixed distutils.tests.test_sysconfig when running on
  installation with no build.

Tests
-----

- Issue #7042: Fix test_signal (test_itimer_virtual) failure on OS X 10.6.


What's New in Python 2.6.3
==========================

*Release date: 02-Oct-2009*

What's New in Python 2.6.3rc1
=============================

*Release date: 29-Sep-2009*

Core and Builtins
-----------------

- Issue #5329: Fix os.popen* regression from 2.5 with commands as a
  sequence running through the shell.  Patch by Jean-Paul Calderone
  and Jani Hakala.

- Issue #6990: Fix threading.local subclasses leaving old state around
  after a reference cycle GC which could be recycled by new locals.

- Issue #6922: Fix an infinite loop when trying to decode an invalid
  UTF-32 stream with a non-raising error handler like "replace" or "ignore".

- Issue #1590864: Fix potential deadlock when mixing threads and fork().

- Issue #6844: Do not emit DeprecationWarnings when accessing a "message"
  attribute on exceptions that was set explicitly.

- Issue #6846: Fix bug where bytearray.pop() returns negative integers.

- Issue #6707: dir() on an uninitialized module caused a crash.

- Issue #6540: Fixed crash for bytearray.translate() with invalid parameters.

- Issue #6573: set.union() stopped processing inputs if an instance of self
  occurred in the argument chain.

- Issue #6070: On posix platforms import no longer copies the execute bit
  from the .py file to the .pyc file if it is set.
